BOT-4133 response queue
