# main.py
@@ -1,69 +1,175 @@
 #!/usr/bin/env python3
 import os
 import connexion
+from functools import singledispatch
 from flask import current_app
 from flask_healthz import healthz
 import multiprocessing as mp
 from api.embeddings import calculate_embeddings_worker
-from sklearn.decomposition import PCA
-from sklearn.metrics.pairwise import cosine_similarity
-from joblib import Parallel, delayed
-from api.term_analysis import chi2_analyzer, similarity_analyzer
-from api.utils import pandas_utils
 from multiprocessing import Process, RawValue, Lock
-import tensorflow as tf
-import tensorflow_hub as hub
-import tensorflow_text
 import json
-import numpy as np
-import pandas as pd
-import math
-from collections import defaultdict
-import torch
+import time
 import requests
-import gc
-import inspect
-import redis
+import numpy as np
 from api.utils.log import getLogger
 from api.redis_client import getRedis
 
 
-def redis_scheduler(req_queue):
+redis_enabled = int(os.environ.get('REDIS_ENABLE', 0)) == 1
+max_retries = int(os.environ.get('COACH_RETRY_REQUEST_RETRIES', 12))
+retry_delay_seconds = int(os.environ.get('COACH_RETRY_REQUEST_DELAY', 10))
+maxCalcCount = int(os.environ.get('COACH_MAX_CALCULATIONS_PER_WORKER', 100))
+
+def process_redis(req_queue, res_queue, err_queue):
+    logger = getLogger('process_redis')
+
     in_queue = []
     red = getRedis()
+
+    logger.info('Worker process_redis started...')
     while True:
         for k in red.scan_iter("coachworker_req*"):
             if k not in in_queue:
                 if k.decode("utf-8").startswith('coachworker_req_chi2'):
                     req_obj = json.loads(red.get(k))
                     req_queue.put((req_obj, "calculate_chi2"))
-                    red.set('coachworker_status_chi2_' + req_obj['coachSessionId'], json.dumps({
+                    res_queue.put(({
+                      'redisKey': 'coachworker_status_chi2_' + req_obj['coachSessionId'],
+                      'data': {
                         "method": "calculate_chi2",
                         "clientId": req_obj['clientId'],
                         "coachSessionId": req_obj['coachSessionId'],
                         "status": 'QUEUED',
                         'statusDescription': 'Request for Chi2 Analysis is queued'
-                    }))
+                      }
+                    },))
                 if k.decode("utf-8").startswith('coachworker_req_embeddings'):
                     req_obj = json.loads(red.get(k))
                     req_queue.put((req_obj, "calculate_embeddings"))
-                    red.set('coachworker_status_embeddings_' + req_obj['coachSessionId'], json.dumps({
+                    res_queue.put(({
+                      'redisKey': 'coachworker_status_embeddings_' + req_obj['coachSessionId'],
+                      'data': {
                         "method": "calculate_embeddings",
                         "clientId": req_obj['clientId'],
                         "coachSessionId": req_obj['coachSessionId'],
                         "status": 'QUEUED',
                         'statusDescription': 'Request for Embeddings Analysis is queued'
-                    }))
+                      }
+                    },))
                 in_queue.append(k)
+        time.sleep(5)
 
+@singledispatch
+def to_serializable(val):
+    """Used by default."""
+    return str(val)
 
-def process_scheduler(req_queue, err_queue):
-    logger = getLogger('Worker scheduler')
-    logger.info('Worker scheduler started...')
+@to_serializable.register(np.float32)
+def ts_float32(val):
+    """Used if *val* is an instance of numpy.float32."""
+    return np.float64(val)
+
+def process_responses(req_queue, res_queue, err_queue):
+    logger = getLogger('process_responses')
+
+    red = None
+    if redis_enabled:
+        red = getRedis()
+
+    logger.info('Worker process_responses started...')
+    while True:
+        response_data, retryCount, retryMethod = (lambda a, b=None, c=None: (a, b, c))(*res_queue.get())
+
+        if retryCount is None:
+            retryCount = max_retries
+
+        if retryMethod is None:
+            if redis_enabled and 'redisKey' in response_data:
+                res_queue.put((response_data, retryCount, 'retryRedis'))
+            if 'boxEndpoint' in response_data:
+                res_queue.put((response_data, retryCount, 'retryEndpoint'))
+        elif redis_enabled and retryMethod == 'retryRedis':
+            try:
+                data = json.dumps(response_data['json'], default=to_serializable) if 'json' in response_data else response_data['data']
+                red.set(response_data['redisKey'], data, ex=600)
+                if 'deleteRedisKey' in response_data:
+                  red.delete(response_data['deleteRedisKey'])
+
+                logger.info('Sending redis response to %s ( %s of %s ) successful',
+                    response_data['redisKey'],
+                    max_retries - retryCount + 1,
+                    max_retries,
+                    extra=response_data['log_extras'] if 'log_extras' in response_data else None)
+            except Exception as e:
+                logger.error('%s', e, extra=response_data['log_extras'] if 'log_extras' in response_data else None)
+                if retryCount > 1:
+                    logger.info('Sending redis response to %s ( %s of %s ) failed, trying again in %s seconds',
+                        response_data['redisKey'],
+                        max_retries - retryCount + 1,
+                        max_retries,
+                        retry_delay_seconds)
+                    time.sleep(retry_delay_seconds)
+                    res_queue.put((response_data, retryCount - 1, retryMethod))
+                else:
+                    logger.error('Sending redis response to %s ( %s of %s ) failed finally, no retries anymore',
+                        response_data['redisKey'],
+                        max_retries - retryCount + 1,
+                        max_retries)
+        elif retryMethod == 'retryEndpoint':
+            boxEndpoint = response_data['boxEndpoint']
+            # for testing purposes on local environment
+            if 'COACH_DEV_BOX_ENDPOINT' in os.environ:
+                boxEndpoint = os.environ.get('COACH_DEV_BOX_ENDPOINT')
+            try:
+                headers = response_data["header"] if 'header' in response_data else None
+                data = json.dumps(response_data['json'], default=to_serializable) if 'json' in response_data else response_data['data']
+                res = requests.post(boxEndpoint, headers=headers, data=data)
+                if res.status_code != 200:
+                    raise Exception('Wrong status code ' + str(res.status_code))
+
+                logger.info('Sending HTTP response to %s ( %s of %s ) successful',
+                    boxEndpoint,
+                    max_retries - retryCount + 1,
+                    max_retries,
+                    extra=response_data['log_extras'] if 'log_extras' in response_data else None)
+            except Exception as e:
+                logger.error('%s', e, extra=response_data['log_extras'] if 'log_extras' in response_data else None)
+                if retryCount > 1:
+                    logger.info('Sending HTTP response to %s ( %s of %s ) failed, trying again in %s seconds',
+                        boxEndpoint,
+                        max_retries - retryCount + 1,
+                        max_retries,
+                        retry_delay_seconds)
+                    time.sleep(retry_delay_seconds)
+                    res_queue.put((response_data, retryCount - 1, retryMethod))
+                else:
+                    logger.error('Sending HTTP response to %s ( %s of %s ) failed finally, no retries anymore',
+                        boxEndpoint,
+                        max_retries - retryCount + 1,
+                        max_retries)
+
+def process_requests_worker(req_queue, res_queue, err_queue, processId):
+    worker_name = 'process_requests_worker-' + str(processId)
+    logger = getLogger(worker_name)
+    logger.info('Initialize process_requests_worker ...')
+    calc_count = 0
+    while calc_count < maxCalcCount:
+        request_data, method = req_queue.get()
+
+        if method == 'calculate_chi2' or method == 'calculate_embeddings':
+            calculate_embeddings_worker(logger, worker_name, req_queue, res_queue, err_queue, request_data, method)
+
+        else:
+            logger.error(f'No worker method for {method}, ignoring.')
+
+        calc_count += 1
+
+def process_requests(req_queue, res_queue, err_queue):
+    logger = getLogger('process_requests')
+    logger.info('Worker process_requests started...')
     processes = []
     for i in range(int(os.environ.get('COACH_PARALLEL_WORKERS', 1))):
-        p = mp.Process(target=calculate_embeddings_worker,
-                       args=(req_queue, err_queue, i))
+        p = mp.Process(target=process_requests_worker, name=f'process_requests_worker-{i}', args=(req_queue, res_queue, err_queue, i))
         p.daemon = False
         p.start()
         processes.append(p)
@@ -71,8 +177,7 @@ def process_scheduler(req_queue, err_queue):
         for i in range(len(processes)):
             p = processes[i]
             if not p.is_alive():
-                p = mp.Process(target=calculate_embeddings_worker,
-                               args=(req_queue, err_queue, i))
+                p = mp.Process(target=process_requests_worker, name=f'process_requests_worker-{i}', args=(req_queue, err_queue, i))
                 p.daemon = False
                 p.start()
                 processes[i] = p
@@ -89,14 +194,20 @@ def create_app():
         }
     )
     req_queue = mp.Queue()
+    res_queue = mp.Queue()
     err_queue = mp.Queue()
-    p = mp.Process(target=process_scheduler, args=(req_queue, err_queue,))
-    p.start()
+
+    preq = mp.Process(target=process_requests, name='process_requests', args=(req_queue, res_queue, err_queue))
+    preq.start()
+    pres = mp.Process(target=process_responses, name='process_responses', args=(req_queue, res_queue, err_queue))
+    pres.start()
     if int(os.environ.get('REDIS_ENABLE', 0)) == 1:
-        p = mp.Process(target=redis_scheduler, args=(req_queue,))
+        p = mp.Process(target=process_redis,  name='process_redis', args=(req_queue, res_queue, err_queue))
         p.start()
+
     with app.app.app_context():
         current_app.req_queue = req_queue
+        current_app.res_queue = res_queue
         current_app.err_queue = err_queue
 
     return app
